k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  namespace: backstage
  annotations:
    kubernetes.io/ingress.global-static-ip-name: backstage-static-ip
    networking.gke.io/managed-certificates: backstage-cert
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - host: 136-69-15-143.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage
                port:
                  number: 7007
